Added update employee endpoint
